tests/models/enum/named/u16/fail/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(gt = 2.0)]
        value: u16
    },
}
fn main() {}
